--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,17 @@
     "jsx": "react-jsx",
     "types": ["vite/client"]
   },
-  "include": ["index.tsx", "App.tsx", "supabase.ts", "types.ts", "storage.ts", "components/**/*"],
-  "exclude": ["node_modules", "vite.config.ts"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": [
+    "index.tsx",
+    "App.tsx",
+    "supabase.ts",
+    "types.ts",
+    "storage.ts",
+    "components/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "vite.config.ts"
+  ]
 }
