refactor: Simplify tsconfig for better build performance
Update tsconfig.json to use a broader include pattern (`./**/*.ts`, `./**/*.tsx`) and remove specific file inclusions. This simplifies configuration and allows the build tool to automatically discover relevant files.

Additionally, disable `composite` in tsconfig.node.json to avoid potential issues with module resolution during development builds.

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,7 +1,7 @@
 
 {
   "compilerOptions": {
-    "composite": true,
+    "composite": false,
     "module": "ESNext",
     "moduleResolution": "Node",
     "allowSyntheticDefaultImports": true
