--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,17 +18,6 @@
     "jsx": "react-jsx",
     "types": ["vite/client"]
   },
-  "include": [
-    "index.tsx",
-    "App.tsx",
-    "supabase.ts",
-    "types.ts",
-    "storage.ts",
-    "components/**/*"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist",
-    "vite.config.ts"
-  ]
+  "include": ["./**/*.ts", "./**/*.tsx"],
+  "exclude": ["node_modules", "dist"]
 }
