--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,3 @@
-
 {
   "compilerOptions": {
     "target": "ESNext",
@@ -18,6 +17,6 @@
     "jsx": "react-jsx",
     "types": ["vite/client"]
   },
-  "include": ["./**/*.ts", "./**/*.tsx"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["index.tsx", "App.tsx", "supabase.ts", "types.ts", "storage.ts", "components/**/*"],
+  "exclude": ["node_modules", "dist", "vite.config.ts", "tsconfig.node.json"]
 }
