--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,7 +1,6 @@
-
 {
   "compilerOptions": {
-    "composite": false,
+    "composite": true,
     "module": "ESNext",
     "moduleResolution": "Node",
     "allowSyntheticDefaultImports": true
