refactor: Update tsconfig to include explicit paths
The tsconfig.json file has been updated to explicitly list the files and directories to include and exclude from the TypeScript compilation process. This improves clarity and maintainability by defining the project's scope precisely.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,18 @@
     "jsx": "react-jsx",
     "types": ["vite/client"]
   },
-  "include": ["index.tsx", "App.tsx", "supabase.ts", "types.ts", "storage.ts", "components/**/*"],
-  "exclude": ["node_modules", "dist", "vite.config.ts", "tsconfig.node.json"]
+  "include": [
+    "index.tsx",
+    "App.tsx",
+    "supabase.ts",
+    "types.ts",
+    "storage.ts",
+    "components/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "vite.config.ts",
+    "tsconfig.node.json"
+  ]
 }
