refactor: Centralize Supabase client configuration
Introduces a centralized Supabase client management using a singleton pattern and a proxy. This ensures that the Supabase client is properly initialized with the correct URL and key, even if they are updated dynamically.

Also, refactors storage operations to save Supabase cloud configuration to the database, enabling synchronization across different instances and user sessions. Handles potential database schema inconsistencies during client operations more robustly.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
     "supabase.ts",
     "types.ts",
     "storage.ts",
-    "components/**/*"
+    "components"
   ],
   "exclude": [
     "node_modules",
