--- a/manifest.json
+++ b/manifest.json
@@ -2,17 +2,25 @@
 {
   "short_name": "TrainMaster",
   "name": "TrainMaster Pro: Gestão de Treinamentos",
+  "id": "/trainmaster-pro/",
+  "start_url": "./index.html",
+  "scope": "./",
+  "display": "standalone",
+  "theme_color": "#2563eb",
+  "background_color": "#f8fafc",
+  "orientation": "portrait",
   "icons": [
     {
       "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Crect width='512' height='512' rx='128' fill='%232563eb'/%3E%3Cpath d='M256 160l160 80-160 80-160-80 160-80z' fill='white'/%3E%3Cpath d='M256 320l120-60v80l-120 60-120-60v-80l120 60z' fill='white'/%3E%3C/svg%3E",
       "type": "image/svg+xml",
       "sizes": "512x512",
       "purpose": "any maskable"
+    },
+    {
+      "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 192 192'%3E%3Crect width='192' height='192' rx='48' fill='%232563eb'/%3E%3Cpath d='M96 60l60 30-60 30-60-30 60-30z' fill='white'/%3E%3Cpath d='M96 120l45-22.5v30l-45 22.5-45-22.5v-30l45 22.5z' fill='white'/%3E%3C/svg%3E",
+      "type": "image/svg+xml",
+      "sizes": "192x192",
+      "purpose": "any"
     }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#2563eb",
-  "background_color": "#f8fafc",
-  "orientation": "portrait"
+  ]
 }
