feat: Configure TrainMaster Pro as PWA
Updates PWA configuration to ensure TrainMaster Pro functions correctly as a standalone application. This includes adjusting manifest settings for proper app identification and standalone display, as well as optimizing the service worker for efficient caching of essential assets.

--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
 {
   "short_name": "TrainMaster",
   "name": "TrainMaster Pro: Gestão de Treinamentos",
-  "id": "/trainmaster-pro/",
-  "start_url": "./index.html",
+  "id": "trainmaster-pro-pwa",
+  "start_url": "index.html",
   "scope": "./",
   "display": "standalone",
   "theme_color": "#2563eb",
