--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
   "short_name": "TrainMaster",
   "name": "TrainMaster Pro: Gestão de Treinamentos",
   "id": "trainmaster-pro-pwa",
-  "start_url": "index.html",
-  "scope": "./",
+  "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "theme_color": "#2563eb",
   "background_color": "#f8fafc",
