feat: Enhance PWA functionality and app stability
This commit introduces several improvements to the TrainMaster Pro PWA:

- **PWA Shortcuts:** Implemented PWA shortcuts for quick navigation to key sections like "New Training" and "Pending List," improving user accessibility.
- **URL Routing:** Enhanced initial view routing to support PWA shortcuts via URL parameters and cleans up URL after initial load.
- **Viewport Fit:** Added `viewport-fit=cover` to the meta viewport tag for better fullscreen display on modern devices.
- **Styling Adjustments:** Applied `overflow: hidden` to the body and `overscroll-behavior-y: none` to `body, html` for smoother scrolling and to prevent unintended overscroll effects.
- **API Docs Expansion:** Expanded the API documentation examples within the Integrations component for better clarity and usability.
- **Service Worker Cache:** Updated the service worker cache strategy to `stale-while-revalidate` for local assets, improving performance and offline resilience. Also updated the cache name.
- **Background Color:** Changed the PWA background color to white for a cleaner appearance.

--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
   "scope": "/",
   "display": "standalone",
   "theme_color": "#2563eb",
-  "background_color": "#f8fafc",
+  "background_color": "#ffffff",
   "orientation": "portrait",
   "icons": [
     {
@@ -21,6 +21,29 @@
       "type": "image/svg+xml",
       "sizes": "192x192",
       "purpose": "any"
+    }
+  ],
+  "shortcuts": [
+    {
+      "name": "Novo Atendimento",
+      "short_name": "Atender",
+      "description": "Registrar um novo treinamento",
+      "url": "/?view=NEW_TRAINING",
+      "icons": [{ "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke='%232563eb'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M12 4v16m8-8H4'/%3E%3C/svg%3E", "sizes": "192x192" }]
+    },
+    {
+      "name": "Pendentes",
+      "short_name": "Pendentes",
+      "description": "Ver projetos pendentes",
+      "url": "/?view=PENDING_LIST",
+      "icons": [{ "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke='%232563eb'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z'/%3E%3C/svg%3E", "sizes": "192x192" }]
+    },
+    {
+      "name": "Lista de Clientes",
+      "short_name": "Clientes",
+      "description": "Acessar base de clientes",
+      "url": "/?view=CLIENT_REG",
+      "icons": [{ "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke='%232563eb'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857'/%3E%3C/svg%3E", "sizes": "192x192" }]
     }
   ]
 }
