--- a/manifest.json
+++ b/manifest.json
@@ -1,49 +1,41 @@
 
 {
+  "name": "TrainMaster Pro",
   "short_name": "TrainMaster",
-  "name": "TrainMaster Pro: Gestão de Treinamentos",
-  "id": "trainmaster-pro-pwa",
-  "start_url": "/",
-  "scope": "/",
+  "description": "Gestão Avançada de Treinamentos",
+  "id": "com.trainmaster.pro",
+  "start_url": "./index.html",
   "display": "standalone",
+  "display_override": ["standalone", "window-controls-overlay"],
+  "background_color": "#f8fafc",
   "theme_color": "#2563eb",
-  "background_color": "#ffffff",
   "orientation": "portrait",
+  "scope": "./",
   "icons": [
     {
       "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Crect width='512' height='512' rx='128' fill='%232563eb'/%3E%3Cpath d='M256 160l160 80-160 80-160-80 160-80z' fill='white'/%3E%3Cpath d='M256 320l120-60v80l-120 60-120-60v-80l120 60z' fill='white'/%3E%3C/svg%3E",
+      "sizes": "192x192",
       "type": "image/svg+xml",
-      "sizes": "512x512",
-      "purpose": "any maskable"
+      "purpose": "any"
     },
     {
-      "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 192 192'%3E%3Crect width='192' height='192' rx='48' fill='%232563eb'/%3E%3Cpath d='M96 60l60 30-60 30-60-30 60-30z' fill='white'/%3E%3Cpath d='M96 120l45-22.5v30l-45 22.5-45-22.5v-30l45 22.5z' fill='white'/%3E%3C/svg%3E",
+      "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Crect width='512' height='512' rx='128' fill='%232563eb'/%3E%3Cpath d='M256 160l160 80-160 80-160-80 160-80z' fill='white'/%3E%3Cpath d='M256 320l120-60v80l-120 60-120-60v-80l120 60z' fill='white'/%3E%3C/svg%3E",
+      "sizes": "512x512",
       "type": "image/svg+xml",
-      "sizes": "192x192",
       "purpose": "any"
+    },
+    {
+      "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Crect width='512' height='512' rx='128' fill='%232563eb'/%3E%3Cpath d='M256 160l160 80-160 80-160-80 160-80z' fill='white'/%3E%3Cpath d='M256 320l120-60v80l-120 60-120-60v-80l120 60z' fill='white'/%3E%3C/svg%3E",
+      "sizes": "512x512",
+      "type": "image/svg+xml",
+      "purpose": "maskable"
     }
   ],
   "shortcuts": [
     {
-      "name": "Novo Atendimento",
-      "short_name": "Atender",
-      "description": "Registrar um novo treinamento",
-      "url": "/?view=NEW_TRAINING",
-      "icons": [{ "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke='%232563eb'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M12 4v16m8-8H4'/%3E%3C/svg%3E", "sizes": "192x192" }]
-    },
-    {
-      "name": "Pendentes",
-      "short_name": "Pendentes",
-      "description": "Ver projetos pendentes",
-      "url": "/?view=PENDING_LIST",
-      "icons": [{ "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke='%232563eb'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z'/%3E%3C/svg%3E", "sizes": "192x192" }]
-    },
-    {
-      "name": "Lista de Clientes",
-      "short_name": "Clientes",
-      "description": "Acessar base de clientes",
-      "url": "/?view=CLIENT_REG",
-      "icons": [{ "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke='%232563eb'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857'/%3E%3C/svg%3E", "sizes": "192x192" }]
+      "name": "Novo Treinamento",
+      "url": "./?view=NEW_TRAINING",
+      "icons": [{ "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%232563eb'%3E%3Cpath d='M12 4v16m8-8H4'/%3E%3C/svg%3E", "sizes": "192x192" }]
     }
   ]
 }
