feat: Improve PWA manifest and service worker registration
Updates the PWA manifest with a new ID and enhances the service worker registration in `index.tsx` to handle potential origin mismatches and provide a fallback mechanism. Also updates favicons in `index.html` for better desktop compatibility.

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "TrainMaster Pro",
   "short_name": "TrainMaster",
   "description": "Gestão Avançada de Treinamentos",
-  "id": "com.trainmaster.pro",
+  "id": "com.trainmaster.pro.v2",
   "start_url": "./index.html",
   "display": "standalone",
   "display_override": ["standalone", "window-controls-overlay"],
