--- a/manifest.json
+++ b/manifest.json
@@ -2,40 +2,30 @@
 {
   "name": "TrainMaster Pro",
   "short_name": "TrainMaster",
-  "description": "Gestão Avançada de Treinamentos",
-  "id": "com.trainmaster.pro.v2",
-  "start_url": "./index.html",
+  "description": "Gestão Avançada de Treinamentos de Software",
+  "start_url": "./",
   "display": "standalone",
-  "display_override": ["standalone", "window-controls-overlay"],
   "background_color": "#f8fafc",
   "theme_color": "#2563eb",
   "orientation": "portrait",
-  "scope": "./",
   "icons": [
     {
-      "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Crect width='512' height='512' rx='128' fill='%232563eb'/%3E%3Cpath d='M256 160l160 80-160 80-160-80 160-80z' fill='white'/%3E%3Cpath d='M256 320l120-60v80l-120 60-120-60v-80l120 60z' fill='white'/%3E%3C/svg%3E",
+      "src": "https://cdn-icons-png.flaticon.com/512/3462/3462151.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "https://cdn-icons-png.flaticon.com/512/3462/3462151.png",
       "sizes": "192x192",
-      "type": "image/svg+xml",
-      "purpose": "any"
-    },
-    {
-      "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Crect width='512' height='512' rx='128' fill='%232563eb'/%3E%3Cpath d='M256 160l160 80-160 80-160-80 160-80z' fill='white'/%3E%3Cpath d='M256 320l120-60v80l-120 60-120-60v-80l120 60z' fill='white'/%3E%3C/svg%3E",
-      "sizes": "512x512",
-      "type": "image/svg+xml",
-      "purpose": "any"
-    },
-    {
-      "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Crect width='512' height='512' rx='128' fill='%232563eb'/%3E%3Cpath d='M256 160l160 80-160 80-160-80 160-80z' fill='white'/%3E%3Cpath d='M256 320l120-60v80l-120 60-120-60v-80l120 60z' fill='white'/%3E%3C/svg%3E",
-      "sizes": "512x512",
-      "type": "image/svg+xml",
-      "purpose": "maskable"
+      "type": "image/png"
     }
   ],
   "shortcuts": [
     {
       "name": "Novo Treinamento",
       "url": "./?view=NEW_TRAINING",
-      "icons": [{ "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%232563eb'%3E%3Cpath d='M12 4v16m8-8H4'/%3E%3C/svg%3E", "sizes": "192x192" }]
+      "icons": [{ "src": "https://cdn-icons-png.flaticon.com/192/3119/3119338.png", "sizes": "192x192" }]
     }
   ]
 }
